--- a/package.json
+++ b/package.json
@@ -1,29 +1,16 @@
 {
-  "name": "tut001",
+  "name": "scatter-server",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
     "start-prod": "NODE_ENV=production node ./bin/www",
     "test": "jest",
-    "lint": "eslint .",
-    "build-prod": "NODE_ENV=production webpack -p --config webpack.config.js"
+    "lint": "eslint ."
   },
   "dependencies": {
-    "availity-reactstrap-validation": "^1.4.3",
-    "babel-core": "^6.26.0",
-    "babel-jest": "^21.2.0",
-    "babel-loader": "^7.1.2",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-register": "^6.26.0",
-    "body-parser": "~1.18.2",
     "bootstrap": "4.0.0-alpha.6",
     "compression": "^1.7.1",
-    "compression-webpack-plugin": "^1.1.3",
-    "cookie-parser": "~1.4.3",
-    "css-loader": "^0.28.7",
     "debug": "~2.6.9",
     "disconnect": "^1.2.1",
     "dompurify": "^1.0.3",
@@ -31,34 +18,17 @@
     "express": "4.16.0",
     "express-rate-limit": "^2.11.0",
     "express-session": "^1.15.6",
-    "extract-text-webpack-plugin": "^3.0.2",
     "helmet": "^3.9.0",
     "jsdom": "^11.5.1",
     "jsonwebtoken": "^8.2.0",
-    "mailgun-js": "^0.14.1",
     "mongoose": "^4.13.6",
     "morgan": "~1.9.0",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.14.7",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.4.0",
-    "react": "^16.2.0",
-    "react-addons-css-transition-group": "^15.6.2",
-    "react-addons-transition-group": "^15.6.2",
-    "react-dom": "^16.2.0",
-    "react-redux": "^5.0.6",
-    "react-router-dom": "^4.2.2",
-    "reactstrap": "^4.8.0",
-    "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "sass-loader": "^6.0.6",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
-    "style-loader": "^0.19.1",
-    "uuid": "^3.1.0",
-    "webpack": "^3.10.0",
-    "whatwg-fetch": "^2.0.3"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^4.0.9",
@@ -67,14 +37,6 @@
     "eslint-plugin-jest": "^21.4.2",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1",
-    "react-hot-loader": "^3.1.3",
-    "redux-devtools": "^3.4.1",
-    "redux-devtools-dock-monitor": "^1.1.2",
-    "redux-devtools-log-monitor": "^1.4.0",
-    "redux-logger": "^3.0.6",
-    "supertest": "^3.0.0",
-    "webpack-dev-middleware": "^2.0.1",
-    "webpack-hot-middleware": "^2.21.0"
+    "jest": "^21.2.1"
   }
 }
