--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "body-parser": "^1.18.2",
     "bootstrap": "4.0.0-alpha.6",
     "compression": "^1.7.1",
     "debug": "~2.6.9",
@@ -21,7 +22,7 @@
     "helmet": "^3.9.0",
     "jsdom": "^11.5.1",
     "jsonwebtoken": "^8.2.0",
-    "mongoose": "^4.13.6",
+    "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
