--- a/package.json
+++ b/package.json
@@ -10,34 +10,34 @@
   },
   "dependencies": {
     "body-parser": "^1.18.2",
-    "bootstrap": "4.0.0-alpha.6",
-    "compression": "^1.7.1",
-    "debug": "~2.6.9",
+    "bootstrap": "4.0.0",
+    "compression": "^1.7.2",
+    "debug": "~3.1.0",
     "disconnect": "^1.2.1",
     "dompurify": "^1.0.3",
     "ejs": "~2.5.7",
-    "express": "4.16.0",
+    "express": "4.16.3",
     "express-rate-limit": "^2.11.0",
     "express-session": "^1.15.6",
-    "helmet": "^3.9.0",
-    "jsdom": "^11.5.1",
+    "helmet": "^3.12.0",
+    "jsdom": "^11.6.2",
     "jsonwebtoken": "^8.2.0",
     "mongoose": "^5.0.11",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^4.4.0",
+    "passport-local-mongoose": "^5.0.0",
     "serve-favicon": "~2.4.5",
     "socket.io": "^2.0.4",
-    "uuid": "^3.1.0"
+    "uuid": "^3.2.1"
   },
   "devDependencies": {
-    "eslint": "^4.0.9",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jest": "^21.4.2",
+    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.4.0",
-    "jest": "^21.2.1"
+    "eslint-plugin-react": "^7.7.0",
+    "jest": "^22.4.3"
   }
 }
