--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
+    "start": "node ./server/bin/www",
     "start-prod": "NODE_ENV=production node ./bin/www",
-    "test": "jest",
+    "test-all": "jest",
+    "test": "jest --watch",
     "lint": "eslint ."
   },
   "dependencies": {
@@ -42,6 +43,7 @@
     "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "supersniff": "^2.1.0"
   }
 }
