add no-restricted-syntax rule to eslint, in order to allow for...of syntax

--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
       "components": [ "Link" ],
       "specialLink": [ "to" ]
     }],
-    "no-underscore-dangle"   : [2, { "allow": ["_id"] }]
+    "no-underscore-dangle"   : [2, { "allow": ["_id"] }],
+    "no-restricted-syntax": ["error", "ForInStatement", "LabeledStatement", "WithStatement"]
   }
 }
