--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "scripts": {
     "start": "node ./bin/www",
     "start-prod": "NODE_ENV=production node ./bin/www",
-    "test": "jest",
-    "lint": "eslint ."
+    "test": "NODE_ENV=test DUO=duo jest --watch",
+    "lint": "eslint .",
+    "start-db": "mongod --dbpath .dbdata"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
@@ -38,6 +39,8 @@
     "eslint-plugin-jest": "^21.15.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.7.0",
-    "jest": "^22.4.3"
+    "jest": "^22.4.3",
+    "mongodb": "^3.1.0-beta4",
+    "supertest": "^3.0.0"
   }
 }
