--- a/package.json
+++ b/package.json
@@ -41,6 +41,6 @@
     "eslint-plugin-react": "^7.7.0",
     "jest": "^22.4.3",
     "mongodb": "^3.1.0-beta4",
-    "supertest": "^3.0.0"
+    "node-fetch": "^2.1.2"
   }
 }
